--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     border-radius: 40px;
     border: solid 2px white;
     box-shadow: 5px 20px 40px white;
+    text-align: center;
 }
 
 .contenedor h1 {
